Fix image spacing

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html {
 img {
   width: 100%;
   border-collapse: collapse;
+  display: block;
 }
 
 h2 {
